# hermes-editing-yt

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md
.github/workflows/: lint.yml  pages.yml  test.yml
docs/: README.md  architecture.md  env-vars.md  mcp-tools.md  operator-helpers.md  quickstart.md  release-readiness.md  troubleshooting.md
docs-site/: architecture.html  env-vars.html  index.html  mcp-tools.html  nav.js  operator-helpers.html  quickstart.html  release-readiness.html  style.css  troubleshooting.html
docs/diagrams/: mcp-surface.txt  runtime.txt
docs/media/: README.md
installer/: install.ps1  install.py  install.sh
plugin/: __init__.py  hermes_editing_yt.py  mcp_server.py  oceanus_autoedit.py  plugin.yaml  pyproject.toml  requirements.txt
scripts/: build_docs_site.py  mobile-audit.cjs  run_gpu_demo.py
site/: .gitignore  index.html  next.config.js  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
site/app/: layout.tsx
site/app/(default)/: page.tsx
site/app/css/: style.css
site/components/: community.tsx  cta.tsx  features.tsx  hero-home.tsx  home-client.tsx  modal-video.tsx  page-illustration.tsx  pipeline-flow.tsx  showcase.tsx  spotlight.tsx  terminal-demo.tsx  testimonials.tsx  workflows.tsx
site/components/ui/: footer.tsx  header.tsx
site/public/planet/: scene.glb
site/scripts/: pack-glb.cjs
site/src/: app.tsx  index.css  styles.ts
site/src/assets/: index.ts
site/src/components/: about.tsx  banner.tsx  contact.tsx  experience.tsx  feedbacks.tsx  footer.tsx  hero.tsx  how-it-works.tsx  index.ts  navbar.tsx  pipelines.tsx  resources.tsx  sidebar-toc.tsx  works.tsx
site/src/components/canvas/: computers.tsx  earth.tsx
site/src/constants/: index.ts
site/src/hooks/: use-device-orientation.ts  use-in-center-viewport.ts
skills/hermes-editing-yt/: SKILL.md
skills/oceanus-autoedit/: SKILL.md
tests/: test_hermes_editing_yt.py  test_mcp_server.py  test_oceanus_autoedit.py
